HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationMissingAbstractMethod/Expected.uv
//! Expected diagnostic metadata for the ImplementationMissingAbstractMethod rejected-source specimen.

expectedDiagnostic("E-TYP-2503", "diag.14.Implementations")
